removed usage of global caches when they work with project-dependent elements